# BrainEngine

./: .env.cmake  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  brain_device.h  brain_model.cpp  brain_pipeline.cpp  brain_pipeline.h  brain_swap_chain.cpp  brain_swap_chain.h  brain_window.cpp  brain_window.h  build.sh  c_cpp_properties.json  cmake_install.cmake  compile.sh  configure.sh  envWindowsExample.cmake  first_app.cpp  first_app.h  lve_device.cpp  lve_device.h  lve_pipeline.cpp  lve_pipeline.h  lve_window.cpp  lve_window.h  main.cpp  mingwBuild.bat  unixBuild.sh
.cache/clangd/index/: _fixes.hpp.36FA1B75809585F2.idx  _vectorize.hpp.4083339EE0439D04.idx  brain_buffer.cpp.DBDDEB29C8CA7DF6.idx  brain_buffer.h.7B448460835F40B4.idx  brain_camera.cpp.93C100F5BACDBAC3.idx  brain_camera.h.1BBEA7264D2218FF.idx  brain_descriptors.cpp.30B4078E26507B33.idx  brain_descriptors.h.45351B9B307196B9.idx  brain_device.cpp.4F9AB157D25D0185.idx  brain_device.h.983E7050B11E93D7.idx  brain_frame_info.h.9FA2649548E72144.idx  brain_game_object.cpp.B72E08BE410682F9.idx  brain_game_object.h.3CAFBB0A172D10DE.idx  brain_model.cpp.F2A53115B2CB3705.idx  brain_model.h.D67C4981676C52E3.idx  brain_pipeline.cpp.24C91B1E1C6DCB6F.idx  brain_pipeline.h.9BDA20E4D68B7F57.idx  brain_renderer.cpp.EC6AE421EED0C78B.idx  brain_renderer.h.1D70238CBA32A479.idx  brain_swap_chain.cpp.064BC4F6BD82E3EB.idx  brain_swap_chain.h.19E09A5AEFC18F7F.idx  brain_texture.cpp.360B2FC3D4BD164B.idx  brain_texture.h.12132F0CB6C11929.idx  brain_utils.h.E6DEF9F0E834D259.idx  brain_window.cpp.3DA5054C97AA7EE4.idx  brain_window.h.D51985EE58B27DFE.idx  cocoa_init.m.5B302679E43C5484.idx  cocoa_joystick.h.AD0B146B8E10743F.idx  cocoa_joystick.m.0EE171C6D2F95C2D.idx  cocoa_monitor.m.36648EF2B196569B.idx  cocoa_platform.h.59F9B7CEF8AD50BE.idx  cocoa_time.c.6FD62B8087F725A3.idx  cocoa_time.h.2972C7E4E7649E49.idx  cocoa_window.m.8C961B6937493F44.idx  color_space.hpp.265B2F4E11051B53.idx  color_space.inl.A62953F2BCD57BC9.idx  common.hpp.A1AEA0EF4CE2D05E.idx  compute_common.hpp.CB9259945F8978C4.idx  compute_vector_decl.hpp.2CBA4A3AFE6FB24D.idx  compute_vector_relational.hpp.DCA4AF5C7FB93EF6.idx  (+269 more)
BrainEngine/Dependencies/gl2d/: Makefile  cmake_install.cmake
BrainEngine/Dependencies/glad/: Makefile
BrainEngine/Dependencies/glfw-3.3.2/: Makefile  cmake_install.cmake
BrainEngine/Dependencies/glfw-3.3.2/src/: Makefile
BrainEngine/Dependencies/glm/: Makefile  cmake_install.cmake
BrainEngine/Dependencies/glm/glm/: Makefile  cmake_install.cmake
BrainEngine/Dependencies/glui/: Makefile
BrainEngine/Dependencies/imgui-docking/: Makefile
BrainEngine/Dependencies/profilerLib/: Makefile
BrainEngine/Dependencies/raudio/: Makefile
BrainEngine/Dependencies/safeSave/: Makefile
BrainEngine/Dependencies/stb_image/: Makefile
BrainEngine/Dependencies/stb_truetype/: Makefile  cmake_install.cmake
Dependencies/gl2d/src/: gl2dParticleSystem.cpp
Dependencies/safeSave/include/: safeSave.h
backup/: CMakeLists.txt  run.sh
backup/original_cmake/: CMakeLists.txt
include/app/: first_app.h  keyboard_movement_controller.h
include/vulkan/: brain_buffer.h  brain_camera.h  brain_descriptors.h  brain_device.h  brain_frame_info.h  brain_game_object.h  brain_model.h  brain_pipeline.h  brain_renderer.h  brain_swap_chain.h  brain_texture.h  brain_utils.h  brain_window.h  first_app.h  simple_render_system.h
include/vulkan/systems/: point_light_system.h
shaders/: point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
src/: main.cpp
src/app/: first_app.cpp  keyboard_movement_controller.cpp
src/gameLayer/: gameLayer.cpp
src/vulkan/: brain_buffer.cpp  brain_camera.cpp  brain_descriptors.cpp  brain_device.cpp  brain_game_object.cpp  brain_model.cpp  brain_pipeline.cpp  brain_renderer.cpp  brain_swap_chain.cpp  brain_texture.cpp  brain_window.cpp  first_app.cpp  simple_render_system.cpp
src/vulkan/system/: point_light_system.cpp  simple_render_system.cpp
